[api/datasets] Added DatasetLoadingStatus
